--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,6 +52,8 @@ exec-once = waybar &
 exec-once = hyprpaper
 exec-once = fcitx5 --replace -d
 exec-once = mako
+exec-once = /home/circute/Applications/Kando.AppImage
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -84,7 +86,7 @@ env = GLFW_IM_MODULE,fcitx
 env = INPUT_METHOD,fcitx
 env = XMODIFIERS,fcitx
 env = IMSETTINGS_MODULE,fcitx
-
+ 
 #####################
 ### LOOK AND FEEL ###
 #####################
@@ -206,7 +208,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "Windows" key as main modifier
+$mainMod = ALT # Sets "Windows" key as main modifier 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
@@ -269,6 +271,10 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
+
+
+bind = $mainMod, W, global, kando:main
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -290,6 +296,14 @@ windowrulev2 = float, class:Sigma file manager
 windowrulev2 = move 160 90, class: Sigma file manager
 windowrulev2 = size 1600 900, class: Sigma file manager
 windowrulev2 = norounding 1, title: Fcitx5 Input Window
+windowrulev2 = noblur 1, title: Fcitx5 Input Window
 windowrulev2 = float, class: R3PLAY
 windowrulev2 = bordersize 0, class: R3PLAY
 windowrulev2 = noblur, class: R3PLAY
+windowrulev2 = center 1, class: R3PLAY
+
+#windowrule = noblur, kando
+#windowrule = noanim, kando
+windowrule = norounding, kando
+windowrule = pin, kando
+#windowrulev2 = move 0 40, class: kando
