--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -4,12 +4,12 @@ color0 #1b1d1e
 color8 #505354
 color1 #f92672
 color9 #ff669d
-color2 #a6e22e
+color2 #2f4e77
 color10 #beed5f
 color3 #fd971f
 color11 #e6db74
-color4 #66d9ef
-color12 #66d9ef
+color4 #22ff64
+color12 #9d47ff
 color5 #9e6ffe
 color13 #9e6ffe
 color6 #5e7175
@@ -17,3 +17,4 @@ color14 #a3babf
 color7 #ccccc6
 color15 #f8f8f2
 selection_foreground #121212
+
