--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,7 +3,9 @@ window_border_width 0
 window_padding_width 0
 single_window_margin_width 0
 tab_bar_edge bottom
-font_family      JetBrainsMono Nerd Font Mono
+
+font_family      MesloLGS NF
+
 font_size        12
 bold_font        auto
 italic_font      auto
